<?xml version="1.0"?>
<package format="3">
  <name>lidar_chassis_filter</name>
  <version>0.1.0</version>
  <description>Node ROS2 pour filtrer les points du châssis du robot dans un scan LIDAR</description>
  <maintainer email="rasp@raspbotix.local">raspbotix</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>numpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

