<?xml version="1.0"?>
<package format="3">
  <name>lidar_chassis_filter</name>
  <version>0.1.0</version>
  <description>Filtre LaserScan pour supprimer les retours du châssis du robot</description>
  <maintainer email="ton_email@example.com">ton_nom</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>numpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

